Nav alignment fix
buttons added margin to 20px to space out nav the way i want

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -59,7 +59,7 @@ p {
 }
 
 button{
-    max-width: 170px;
+    width: 170px;
     height: 45px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-style: normal;
@@ -70,14 +70,15 @@ button{
     letter-spacing: 0.15em;
     font-variant: all-small-caps;
     color: #405794;
-    cursor: pointer;
     outline: #405794;
     background-color: #fbf7ea;
     border: 1px solid #405794;
     box-shadow: 8px 8px #405794;
+    margin-top: 20px;
+   
 }
 
-.button:hover{
+button:hover{
     box-shadow: 4px 4px;
     transform: translate3d(4px);
 }
@@ -105,6 +106,8 @@ button{
 .Nav{
 display: flex;
 flex-direction: column;
+align-items: center;
+
 }
 
 .aboutBlurbGroup{
